# Copyright (c) 2019-2020 SRI International.
# All rights reserved.
#
#    This file is part of the Parsley parser.
#
#    Parsley is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Parsley is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "parsley-rust"
version = "0.1.0"
authors = ["Prashanth Mundkur <prashanth.mundkur@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.9"
log = "0.4.8"
env_logger = "0.7.0"
log-panics = "2.0.0"
